# ContentBank

./: .gitignore  Content Bank Database Conversation.docx  ContentBank.md  ContentBankDatabaseConversation.md  LICENSE  Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
shapes/: README.md
shapes/capability/calendar/: shapes.ttl
shapes/capability/inventory/: shapes.ttl
shapes/core/: annotations.ttl  core.ttl  sharing.ttl
src/contentbank/: __init__.py  config.py  main.py
src/contentbank/api/routes/: agents.py  objects.py  proxy.py  replication.py
src/contentbank/capabilities/calendar/: __init__.py
src/contentbank/capabilities/inventory/: __init__.py
src/contentbank/core/: models.py  validation.py
src/contentbank/core/storage/: __init__.py  objects.py
src/contentbank/db/: database.py  models.py
src/contentbank/sharing/: grants.py
tests/unit/: test_agents.py  test_validation.py
tools/schema_gen/: generate.py  requirements.txt
